template-3-tier-web-application.yaml
##########################################################################################
# Define the AWS resources.
##########################################################################################
Resources:


  WebServer:
    Description: Web-server tier EC2 instance
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !Ref WebServerImageId
      InstanceType: !Ref WebServerInstanceType
      KeyName: !Ref KeyName
      SecurityGroups:
      - !Ref WebServerSecurityGroup
      - !Ref InternalSSHOnlySecurityGroup


  WebServerSecurityGroup:
    Description: Security Group allowing web-traffic from across the globe.
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: " Allow HTTP and HTTPS traffic from the open internet."
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
        - CidrIp: 0.0.0.0/0
          FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'

  InternalSSHOnlySecurityGroup:
    Description: Security Group allowing user to securely access the instance.
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: " Allow SSH Traffic"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '22'
          IpProtocol: tcp
          ToPort: '22'


#########################################################################################################################
# Define the Input Parameters
#########################################################################################################################

Parameters:

  KeyName:
    Description: A Key Pair that could be used to access the EC2 instance.
    Type: AWS::EC2::KeyPair::KeyName

  WebServerImageId:
    Description: AMI id to be used for launching the instance.
    Type: String

  WebServerInstanceType:
    Description: Instance Type to be laucnhed. Use t2.micro for free tier.
    Type: String
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
    Default: t2.micro
    ConstraintDescription: Must be valid t2 type instance.
